src/objects/Sources_Uses__c.object
<CustomObject>
    <description>Object to keep track of individual line item on Sources &amp; Uses</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Type of Source/Use (COI, etc.)</description>
        <inlineHelpText>Type of Source/Use (COI, etc.)</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Cost of Issuance</fullName>
                </value>
                <value>
                    <fullName>Capitalized Interest Sub-Account</fullName>
                </value>
                <value>
                    <fullName>Bond Reserve</fullName>
                </value>
                <value>
                    <fullName>C-PACE Project Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closing_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closing Cost?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sources &amp; Uses</relationshipLabel>
        <relationshipName>Sources_Uses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <label>Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Or_Use__c</fullName>
        <label>Source Or Use?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Use_Type__c</fullName>
        <description>Type of Source/Use</description>
        <inlineHelpText>Type of Source/Use</inlineHelpText>
        <label>Source/Use Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Fee</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Base Program Admin</fullName>
                </value>
                <value>
                    <fullName>Capitalized Interest</fullName>
                </value>
                <value>
                    <fullName>CDIAC Fee (Bond Reserve)</fullName>
                </value>
                <value>
                    <fullName>CleanFund Financing Fee</fullName>
                </value>
                <value>
                    <fullName>Fee Adjustment</fullName>
                </value>
                <value>
                    <fullName>Fiscal Agent</fullName>
                </value>
                <value>
                    <fullName>Fiscal Agent (Bond Reserve)</fullName>
                </value>
                <value>
                    <fullName>Issuer Legal Counsel (at close)</fullName>
                </value>
                <value>
                    <fullName>Issuer Legal Counsel (Bond Reserve)</fullName>
                </value>
                <value>
                    <fullName>PACE Assessment (Total Assessment Amount)</fullName>
                </value>
                <value>
                    <fullName>Program Administration Fee</fullName>
                </value>
                <value>
                    <fullName>Program Sponsor (at close)</fullName>
                </value>
                <value>
                    <fullName>Program Sponsor (Bond Reserve)</fullName>
                </value>
                <value>
                    <fullName>Project Amount</fullName>
                </value>
                <value>
                    <fullName>Recordation Fee</fullName>
                </value>
                <value>
                    <fullName>Tax Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Source &amp; Use</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sources &amp; Uses Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sources &amp; Uses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>